<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FileDrop</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="change">Rename</string>
    <string name="hint">Hint</string>
    <string name="cancel">Cancel</string>
    <string name="rename">Rename to</string>
    <string name="newdir">Make folder</string>
    <string name="newhint">Please enter the new folder name</string>
    <string name="confirm">Confirm</string>
    <string name="newfolder">New folder name</string>
    <string name="unabletoopen">Unable to open file: Type not recognised</string>
    <string name="menusend">Send</string>
    <string name="menudetails">Details</string>
    <string name="menudelete">Delete</string>
    <string name="add">Add</string>
    <string name="refresh">Refresh</string>
    <string name="newf">New folder</string>
    <string name="search">Search devices</string>
    <string name="set">Rename</string>
    <string name="exit">Exit</string>
    <string name="close">Close</string>
    <string name="fail">Failed</string>
    <string name="success">Successful</string>
    <string name="error">ERROR</string>
    <string name="receive">Receive</string>
    <string name="refuse">Refuse</string>
    <string name="help">Help</string>
    <string name="details1">Type: Folder.\nIncluding folders: </string>
    <string name="details2">\nIncluding files: </string>
    <string name="details3">\n</string>
    <string name="details4">File type: </string>
    <string name="details5">Unknown\n</string>
    <string name="details6">File (</string>
    <string name="details7">Properties</string>
    <string name="details8">Copy path</string>
    <string name="details9">The path has been copied to the clipboard</string>
    <string name="details10">Confirm to delete this file?</string>
    <string name="details11">Confirm to delete this folder?</string>
    <string name="details12">Delete?</string>
    <string name="details13">Deleted successfully</string>
    <string name="details14">Invalid input</string>
    <string name="details15">Input the text to send</string>
    <string name="details16">Enter the ip address</string>
    <string name="details17">Enter the device name</string>
    <string name="details18">ipv4 address</string>
    <string name="details19">Modified successfully</string>
    <string name="details20">Choose a device</string>
    <string name="details21">Please choose a file or input text firstly</string>
    <string name="details22">Send?</string>
    <string name="details23">Searching devices</string>
    <string name="details24">Search finished</string>
    <string name="details25">Unable to connect </string>
    <string name="details26">Renamed successfully </string>
    <string name="details27">No following characters are allowed</string>
    <string name="details28">Folder already exists</string>
    <string name="details29">ERROR: Port is busy. Restart the software please.</string>
    <string name="details30">Open File Drop on PC/Mac or other iOS/Android devices to send file.</string>
    <string name="details31">If the opposite device is NOT in the same network with this one, please select ADD button on the opposite device and input address below:</string>
    <string name="details32">Receiving file - </string>
    <string name="details33">Waiting for receiving file..</string>
    <string name="details34">An error occurs while receiving</string>
    <string name="details35">New text received</string>
    <string name="details36">The text has been copied to the clipboard</string>
    <string name="details37">Succeed to add </string>
    <string name="details38">Transport failed, target is absent or busy\nPlease try again later</string>
    <string name="details39">Text transport succeeded\nCopy to the clipboard?</string>
    <string name="details40">File transport succeeded</string>
    <string name="details41">New file transport request</string>
    <string name="details42">ERROR: Wrong request</string>
    <string name="details43">Confirm to receive?</string>
    <string name="details44">You have refused to receive files</string>
    <string name="details45">File transport succeeded</string>
    <string name="details46">Total size: </string>
    <string name="details47">Sending file - </string>
    <string name="details48">Waiting for sending file..</string>
    <string name="details49">Target refuse to receive files</string>
    <string name="details50">An error occurs while sending files</string>
    <string name="details51">Press again to cancel process</string>
    <string name="details52">Press again to stop listening</string>
    <string name="details54">Press again to exit</string>

</resources>
