<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".FileDrop" android:id="@+id/newdir_page"
    >

    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" >
        <LinearLayout android:id="@+id/newhint" android:paddingTop="15dp"
            android:orientation="horizontal" android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/newdir"  android:textSize="16sp"/>
        <EditText android:id="@+id/newtext"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:singleLine="true" android:hint="@string/newfolder" />
        </LinearLayout>
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
            android:layout_below="@+id/newhint"  android:layout_marginTop="10dp"
            android:paddingTop="10dp" android:text="@string/newhint"
            android:id="@+id/newhinttext"
            android:textSize="18sp"/>
        <LinearLayout android:id="@+id/yesornobutton"
             android:layout_marginTop="10dp"
            android:layout_below="@+id/newhinttext" android:layout_centerHorizontal="true"
            android:orientation="horizontal" android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button android:text="@string/confirm" android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/change"
                style="?android:attr/buttonBarButtonStyle"
                android:textSize="12sp"/>
            <Button android:text="@string/cancel" android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/cancel"
                style="?android:attr/buttonBarButtonStyle" 
                android:textSize="12sp"/>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>